# MemSan

./: CMakeCache.txt  CMakeLists.txt  LOG6302.cbp  Makefile  MemSan.dump  MemSan.dump.sqlite3  MemSan.dump.wc  README.md  cmake_install.cmake  graph.dot  quiz5.txt  test.dot
LOG6302_TP/tests/: compile_commands.json
article/: Makefile  MemSan.aux  MemSan.tex
results/: cd.dot  cfg.dot  dom.dot  domtree.dot  pdom.dot
src/: Analyzer.py  BaseNode.py  BasicBlock.py  CFGtoDotDumper.py  ClassNode.py  ContinueNode.py  Edge.py  FileNode.py  FunctionNode.py  GhidraAnalyzer.py  IfNode.py  MethodNode.py  ReturnNode.py  UnaryOperatorNode.py  Visitor.cpp  Visitor.h  WhileNode.py  cd.dot  cfg.dot  dom.dot  ex1.cpp  main.cpp  metrics.py  metrics.txt  output.txt  pdom.dot  test.dot  wc.c
src/analyzer/: BaseNode.py  BasicBlock.py  ClangAnalyzer.py  GhidraAnalyzer.py
src/clang_dumper/: Visitor.h
src/ghidra_dumper/: CFGtoDotDumper.py
tests/: LOG6302_TP1_example.cpp  compile_commands.json  compile_commands.json.old2  wc.c
tp2/: CMakeCache.txt  CMakeLists.txt  Makefile  MemSan.dump  cmake_install.cmake
tp2/src/: Analyzer.py  AttributeNode.py  main.cpp  uml.dot
